--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 	
 </head>
 <body>
-	<p>This is a text</p>
+
+	<h1>Heading 1</h1>
+
+	<hr>
+
+	<img src="img/hula.jpg">
+	<img src="img/santa.jpg">
+	<img src="img/wiz.jpg">
+	<img src="img/thanks.jpg">
+
+	<hr>
+
+	<h1>Heading 2</h1>
 
 </body>
 </html>
