--- a/index.html
+++ b/index.html
@@ -10,18 +10,56 @@
 </head>
 <body>
 
+	<hr>
+
 	<h1>Heading 1</h1>
 
 	<hr>
 
+<div>
 	<img src="img/hula.jpg">
 	<img src="img/santa.jpg">
 	<img src="img/wiz.jpg">
 	<img src="img/thanks.jpg">
+</div>
+
+	<hr>
+
+	<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	
+	<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 	<hr>
 
 	<h1>Heading 2</h1>
 
+	<hr>
+
+<div class="paragraph">
+	<ol>
+		<li>Hula Costume</li>
+		<li>Mrs. Clause Costume</li>
+		<li>Wizard Costume</li>
+		<li>Pilgrim Costume</li>
+	</ol>
+</div>
+
 </body>
 </html>
+
+
+
+
+
+
+
