--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
   <title>Radical PLUS Group</title>
  
   <link rel="stylesheet" href="css/styles.css">	
+
+  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+
+  <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 	
 </head>
 <body>
+
+<a id="top"></a>
 
 	<hr>
 
@@ -17,22 +23,22 @@
 	<hr>
 
 <div>
-	<img src="img/hula.jpg">
-	<img src="img/santa.jpg">
-	<img src="img/wiz.jpg">
-	<img src="img/thanks.jpg">
+	<img src="img/hula.jpg" class="fade" title="Chinchilla in a Hula costume." alt="Chinchilla in a Hula costume.">
+	<img src="img/santa.jpg" class="fade" title="Chinchilla in a Mrs. Clause costume." alt="Chinchilla in a Mrs. Clause costume.">
+	<img src="img/wiz.jpg" class="fade" title="Chinchilla in a wizard costume." alt="Chinchilla in a wizard costume.">
+	<img src="img/thanks.jpg" class="fade" title="Chinchilla in a pilgrim costume." alt="Chinchilla in a pilgrim costume.">
 </div>
 
 	<hr>
 
-	<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	<p class="paragraph"><span class="dropcap">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></td>
 	
-	<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	<p class="paragraph"><span class="dropcap">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -45,21 +51,18 @@
 
 	<hr>
 
-<div class="paragraph">
-	<ol>
+	<ol class="list">
 		<li>Hula Costume</li>
 		<li>Mrs. Clause Costume</li>
 		<li>Wizard Costume</li>
 		<li>Pilgrim Costume</li>
 	</ol>
-</div>
+
+<div><a href="#top">Back to Top</a></div>
 
 </body>
+<footer>
+	<p>Made by Kyle Hamlin for Web Design 1 PLUS group. 2015 &copy</p>
+
+</footer>	
 </html>
-
-
-
-
-
-
-
