--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 </body>
 <footer>
-	<p>Made by Kyle Hamlin for Web Design 1 PLUS group. 2015 &copy</p>
+	<p>Made by Kyle Hamlin for Web Design 1 PLUS group at EWU. 2015 &copy</p>
 
 </footer>	
 </html>
